--- a/static/style.css
+++ b/static/style.css
@@ -75,5 +75,8 @@ h1 {
 }
 
 .GitHub {
-    height: 125px;
+    margin-top: 30px;
+    margin-left: 30px;
+    margin-bottom: 45px;
+    width: 125px;
 }
