--- a/static/style.css
+++ b/static/style.css
@@ -28,6 +28,7 @@ h1 {
 }
 
 .col-1 {width: 8.33%;}
+.col-1_5 {width: 12.5%;}
 .col-2 {width: 16.66%;}
 .col-3 {width: 25%;}
 .col-4 {width: 33.33%;}
@@ -69,7 +70,8 @@ h1 {
 
 .headshot {
     height: 400px;
-    border: 15px solid pink;
+    border: 15px solid rgb(230, 180, 189);
+    /*border: 15px solid pink;*/
 }
 
 .LinkedIn {
@@ -78,7 +80,16 @@ h1 {
 
 .GitHub {
     margin-top: 30px;
-    margin-left: 30px;
+    margin-left: 38px;
     margin-bottom: 45px;
     width: 125px;
+}
+
+a {
+    text-decoration: none;
+}
+
+a.name:hover {
+    color: rgb(0, 100, 200);
+    text-decoration: underline;
 }
